[project]
name = "gt7-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Florian Witteler",email = "github@flwi.de"}
]
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "polars (>=1.20.0,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
